minor bug toggling visual misaligned hid circle notch in option

--- a/css/font.css
+++ b/css/font.css
@@ -77,8 +77,8 @@
   color: #aaa;
 }
 
-.fa-circle-thin:before {
-  font-family: "Font Awesome 5 Pro";
+.fa-circle-notch:before {
+  font-family: FontAwesome;
   content: "\f1ce";
 }
 
